--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.10"
   },
   "devDependencies": {
+    "@stripe/stripe-js": "^1.27.0",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.2"
+    "eslint-config-next": "12.1.2",
+    "next": "^12.1.2",
+    "stripe": "^8.217.0"
   }
 }
